# SpaceInvadersCPP

./: .gitattributes  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
source/: Color.cpp  Color.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  InputHandlerSystem.cpp  InputHandlerSystem.h  RendererHelper.cpp  RendererHelper.h  SpaceShip.cpp  SpaceShip.h  Vector.cpp  Vector.h  main.cpp
source/components/: GameComponent.h  InputComponent.cpp  InputComponent.h
